--- a/xlsxcracker.lpi
+++ b/xlsxcracker.lpi
@@ -18,6 +18,7 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
+      <BuildNr Value="7"/>
       <Language Value="0809"/>
       <StringTable ProductVersion=""/>
     </VersionInfo>
@@ -37,7 +38,7 @@
         <PackageName Value="LCL"/>
       </Item1>
     </RequiredPackages>
-    <Units Count="4">
+    <Units Count="5">
       <Unit0>
         <Filename Value="xlsxcracker.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -57,6 +58,12 @@
         <Filename Value="usqlitedao.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit3>
+      <Unit4>
+        <Filename Value="fabout.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="frmAbout"/>
+        <ResourceBaseClass Value="Form"/>
+      </Unit4>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
