GPL and FreeSans

--- a/xlsxcracker.lpi
+++ b/xlsxcracker.lpi
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <CONFIG>
   <ProjectOptions>
-    <Version Value="9"/>
+    <Version Value="10"/>
     <PathDelim Value="\"/>
     <General>
       <SessionStorage Value="InProjectDir"/>
@@ -18,9 +18,9 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
-      <BuildNr Value="10"/>
+      <BuildNr Value="13"/>
       <Language Value="0809"/>
-      <StringTable ProductVersion=""/>
+      <StringTable ProductVersion="1.0.0.10"/>
     </VersionInfo>
     <BuildModes Count="1">
       <Item1 Name="Default" Default="True"/>
@@ -49,7 +49,6 @@
         <ComponentName Value="frmMain"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <UnitName Value="fmain"/>
       </Unit1>
       <Unit2>
         <Filename Value="uxlsx.pas"/>
@@ -65,7 +64,6 @@
         <ComponentName Value="frmAbout"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <UnitName Value="fabout"/>
       </Unit4>
     </Units>
   </ProjectOptions>
